@@ -814,4 +814,31 @@ subtest '->package is only allowed for api = 0' => sub {
 
 };
 
+subtest 'warning defaults' => sub {
+
+  my @warnings;
+  local $SIG{__WARN__} = sub {
+    note "[warning]\n", $_[0];
+    push @warnings, $_[0] if $_[0] =~ /^warning: error loading/;
+  };
+
+  subtest 'api = 0' => sub {
+    @warnings = ();
+    my $ffi = FFI::Platypus->new( api => 0 );
+    $ffi->lib('corpus/bogus.so');
+    is $ffi->find_symbol('foo'), undef;
+    is_deeply \@warnings, [];
+  };
+
+  subtest 'api = 1' => sub {
+    @warnings = ();
+    my $ffi = FFI::Platypus->new( api => 1, experimental => 1);
+    $ffi->lib('corpus/bogus.so');
+    local $@ = '';
+    is $ffi->find_symbol('foo'), undef;
+    like $warnings[0], qr/^warning: error loading corpus\/bogus\.so/;
+  };
+
+};
+
 done_testing;
